jobs page + post page done still some things to fix (light dark mode + footers +all clear position)

--- a/frontend/assets/css/footer_navbar.css
+++ b/frontend/assets/css/footer_navbar.css
@@ -48,12 +48,17 @@ body {
     transition: var(--transition);
 }
 
-/* ================= NAVBAR ================= */
+/* navbar*/
 .navbar.bg-body-tertiary {
     background: var(--navbar-bg) !important;
     backdrop-filter: blur(12px);
     box-shadow: var(--shadow);
     border-bottom: 1px solid var(--border);
+    position: fixed;
+    top: 0;             
+    left: 0;
+    width: 100%;         
+    z-index: 1000;  
 }
 
 /* brand */
